# PAPAGEDON-CORE-

./: AGENT.md  ARCHITECTURE.md  CMakeLists.txt  CODEX-CONTEXT.md  vcpkg.json
apps/player/: CMakeLists.txt
apps/player/src/: main.cpp
build-stage1/: CMakeCache.txt  Makefile  cmake_install.cmake
build-stage1/apps/player/: Makefile  cmake_install.cmake
build-stage1/engine/audio/: Makefile  cmake_install.cmake
build-stage1/engine/core/: Makefile  cmake_install.cmake
build-stage1/engine/runtime/: Makefile  cmake_install.cmake
build-stage1/engine/utilities/: Makefile  cmake_install.cmake
build-verify/: CMakeCache.txt  Makefile  cmake_install.cmake
build-verify/apps/player/: Makefile  cmake_install.cmake
build-verify/engine/audio/: Makefile  cmake_install.cmake
build-verify/engine/core/: Makefile  cmake_install.cmake
build-verify/engine/core/aei/: Makefile  cmake_install.cmake
build-verify/engine/runtime/: Makefile  cmake_install.cmake
build-verify/engine/utilities/: Makefile  cmake_install.cmake
engine/audio/: AudioAnalyzer.cpp  AudioAnalyzer.h  AudioFrame.cpp  AudioFrame.h  AudioInput.cpp  AudioInput.h  CMakeLists.txt  ExperienceSignals.cpp  ExperienceSignals.h
engine/core/: CMakeLists.txt
engine/core/aei/: CMakeLists.txt
engine/core/aei/src/: AudioInput.cpp
engine/core/include/papagedon/core/: Engine.h
engine/core/src/: Engine.cpp
engine/experience/: CMakeLists.txt  ExperienceEvent.cpp  ExperienceEvent.h  ExperienceGraph.cpp  ExperienceGraph.h  ExperienceState.cpp  ExperienceState.h
engine/rendering/: CMakeLists.txt  IRenderer.h  RenderFrame.cpp  RenderFrame.h  RenderSettings.cpp  RenderSettings.h  Renderer.cpp  Renderer.h
engine/rendering/backends/: OpenGLRenderer.cpp  OpenGLRenderer.h
engine/runtime/: CMakeLists.txt
engine/runtime/include/papagedon/runtime/: Runtime.h
engine/runtime/src/: Runtime.cpp
engine/scene/: CMakeLists.txt  SceneDNA.cpp  SceneDNA.h  SceneProfile.cpp  SceneProfile.h  SceneState.cpp  SceneState.h
engine/utilities/: CMakeLists.txt
engine/utilities/include/papagedon/utilities/: Logger.h
engine/utilities/src/: Logger.cpp
